Reseno jos po nesto, hlebic:(

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 <button class="category-btn" data-category="burgers">Junica</button>
                 <button class="category-btn" data-category="chicken">Pile</button>
                 <button class="category-btn" data-category="kebab">Svinjče</button>
-				<button class="category-btn" data-category="specijaliteti">Specijaliteti</button>
+				<button class="category-btn" data-category="specijaliteti">...</button>
 				<button class="category-btn" data-category="dorucak">Doručak u lepinji</button>
 				<button class="category-btn" data-category="naKilo">Na kilo</button>
                 <button class="category-btn" data-category="slatkisi">Slatkiši</button>
@@ -611,7 +611,7 @@
             </div>
 			
 			<div id="sides" class="menu-category">
-                <h2 class="category-title">Specijaliteti</h2>
+                <h2 class="category-title">Sendviči i kačkavalji</h2>
                 <div class="menu-grid">
                     <div class="food-card" data-category="specijaliteti">
 						<div class="shine"></div>
@@ -908,7 +908,7 @@
                             <h3 class="food-title">Hlebić</h3>
                             <p class="food-description">E, ovo već nema nikakve veze sa kravama, ali je tu da upotpuni doživljaj. </p>
                             <div class="food-footer">
-                                <span class="food-price">50 RSD</span>
+                                <span class="food-price">Priceless, nećete valjda hleb pored ovakvih specijaliteta?</span>
                                 <button class="call-button" onclick="handleClick()">Pozovite odmah</button>
                             </div>
                         </div>
