Reseno jos po nesto, hlebic:(

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                         <img src="./images/2d pljeskavica.jpg" alt="2D pljeskavica" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">2D pljeskavica</h3>
-                            <p class="food-description">100% junetina, duvan čvarci i kačkavalj.</p>
+                            <p class="food-description">100% junetina, duvan čvarci i kačkavalj. Njam njam!</p>
                             <div class="food-footer">
                                 <div>
 									<span class="food-price">250g: 550 RSD</span> <br>
