Sendvici nisu sendvici nego przenice

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                         <img src="./images/logo_card.png" alt="Chicken nuggets" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">Chicken nuggets</h3>
-                            <p class="food-description">Pohovane "loptice" piletine savršene za umakanje u različite sosove, a od nas dobijate čak 2. <br> Perfekcija.</p>
+                            <p class="food-description">Pohovane "loptice" piletine savršene za umakanje u različite sosove, a od nas dobijate cak 2 ili 3 ili 4??? <br> Perfekcija.</p>
                             <div class="food-footer">
                                 <span class="food-price">200g: 250 RSD</span>
                                 <button class="call-button" onclick="handleClick()">Pozovite odmah</button>
@@ -615,7 +615,7 @@
                 <div class="menu-grid">
                     <div class="food-card" data-category="specijaliteti">
 						<div class="shine"></div>
-                        <img src="./images/sendvic.jpg" alt="sendvic" class="food-image">
+                        <img src="./images/logo_card.png" alt="sendvic" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">Sendvič</h3>
                             <p class="food-description">Ako ste za brzu klopu ili ste u žurbi, naši sendviči su uvek tu da Vas stignu. <br> U pitanju je: meso iz ponude ispod, kačkavalj, zelena salata i namaz po izboru.</p>
@@ -715,7 +715,7 @@
 					
 					<div class="food-card" data-category="specijaliteti">
 						<div class="shine"></div>
-                        <img src="./images/logo_card.png" alt="punjene przenice" class="food-image">
+                        <img src="./images/przenica.jpg" alt="punjene przenice" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">Punjene prženice</h3>
                             <p class="food-description"> Đoletove prženice punjene čedar sirom, pavlakom, pečenicom i kečapom. Možda Vam ih Đole nije spremao u detinjstvu, ali cenim da je pravo vreme da počne.</p>
