--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                         </div>
                     </div>
 					
-					<div class="food-card" data-category="specijaliteti">
+					<div class="food-card" data-category="dorucak">
 						<div class="shine"></div>
                         <img src="./images/przenica.jpg" alt="punjene przenice" class="food-image">
                         <div class="food-content">
