Updated some captions

--- a/menu_page.html
+++ b/menu_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Druga Dimenzija</title>
+    <title>Menu - Druga dimenzija</title>
     <link rel="icon" href="./images/logo_picture_tab.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -958,7 +958,7 @@
             }).addTo(map);
 
             L.marker([44.011699327201484, 20.910778985057316]).addTo(map)
-                .bindPopup('Druga Dimenzija,<br> Kneza Miloša 16,<br>Kragujevac, Srbija<br> (u blizini PKG-a)')
+                .bindPopup('Druga dimenzija,<br> Kneza Miloša 16,<br>Kragujevac, Srbija<br> (u blizini PKG-a)')
                 .openPopup();
         });
         
