Dodat info za indexiranje u pretrazivacima

--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Druga dimenzija</title>
+    <title>Druga dimenzija - roštilj, burgeri, pljeskavice</title>
 	<link rel="icon" href="./images/logo_picture_tab.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="description" content="Brza hrana, roštilj, burgeri, pljeskavice, karadjordjeve, ćevapi i dostava u Kragujevcu. Uživajte u autentičnom ukusu našeg roštilja.">
+    <meta name="keywords" content="brza hrana kragujevac, rostilj kragujevac, kragujevac dostava, pljeskavica, rostilj, burgeri, karadjordjeva, cevapi, brza hrana, kragujevac, dostava, gurmanska, hrana">
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Restaurant",
+          "name": "Druga dimenzija",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Kneza Miloša 16",
+            "addressLocality": "Kragujevac",
+            "addressRegion": "Šumadija",
+            "postalCode": "34000",
+            "addressCountry": "RS"
+          },
+          "telephone": "+381652552390",
+          "servesCuisine": ["Fast Food", "Roštilj", "Burgeri", "Ćevapi", "Brza hrana", "Dostava"],
+          "url": "https://www.drugadimenzija.com",
+          "priceRange": "$"
+        }
+    </script>
+        
     <style>
         body {
             margin: 0;
