--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta name="description" content="Brza hrana, roštilj, burgeri, pljeskavice, karadjordjeve, ćevapi i dostava u Kragujevcu. Uživajte u autentičnom ukusu našeg roštilja.">
-    <meta name="keywords" content="brza hrana kragujevac, rostilj kragujevac, kragujevac dostava, pljeskavica, rostilj, burgeri, karadjordjeva, cevapi, brza hrana, kragujevac, dostava, gurmanska, hrana">
+    <meta name="keywords" content="druga dimenzija, druga dimenzija kragujevac, druga dimenzija dostava, brza hrana kragujevac, rostilj kragujevac, restorani kragujevac, kragujevac dostava, pljeskavica, rostilj, burgeri, karadjordjeva, cevapi, brza hrana, kragujevac, dostava, gurmanska, hrana">
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
