--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Druga dimenzija - roštilj, burgeri, pljeskavice</title>
+    <title>Druga dimenzija - roštilj, burgeri, pljeskavice, ćevapi...</title>
 	<link rel="icon" href="./images/logo_picture_tab.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
