--- a/menu_page.html
+++ b/menu_page.html
@@ -4,6 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu - Druga dimenzija</title>
+
+        
+    <meta name="description" content="Brza hrana, roštilj, burgeri, pljeskavice, karadjordjeve, ćevapi i dostava u Kragujevcu. Uživajte u autentičnom ukusu našeg roštilja.">
+    <meta name="keywords" content="druga dimenzija, druga dimenzija kragujevac, druga dimenzija dostava, brza hrana kragujevac, rostilj kragujevac, restorani kragujevac, kragujevac dostava, pljeskavica, rostilj, burgeri, karadjordjeva, cevapi, brza hrana, kragujevac, dostava, gurmanska, hrana">
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Restaurant",
+          "name": "Druga dimenzija",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Kneza Miloša 16",
+            "addressLocality": "Kragujevac",
+            "addressRegion": "Šumadija",
+            "postalCode": "34000",
+            "addressCountry": "RS"
+          },
+          "telephone": "+381652552390",
+          "servesCuisine": ["Fast Food", "Roštilj", "Burgeri", "Ćevapi", "Brza hrana", "Dostava"],
+          "url": "https://druga-dimenzija.github.io/menu_page.html",
+          "priceRange": "$"
+        }
+    </script>
+        
+
     <link rel="icon" href="./images/logo_picture_tab.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
