--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
         };
         
         // Send the email using your EmailJS service and template IDs
-        emailjs.send('2d_website_access', 'Druga dimenzija - website accessed', templateParams) // Line ~115: Replace placeholders with your IDs
+        emailjs.send('2d_website_access', '2ddrugadimenzija@gmail.com', templateParams) // Line ~115: Replace placeholders with your IDs
           .then(function(response) {
-            //console.log('Email notification sent successfully!', response.status, response.text);
+            console.log('Email notification sent successfully!', response.status, response.text);
           }, function(error) {
-            //console.log('Failed to send email notification:', error);
+            console.log('Failed to send email notification:', error);
           });
       });
     </script>
