update visits cnt

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <script>
       // Initialize EmailJS with your user ID (replace 'YOUR_USER_ID' with your actual EmailJS user ID)
       (function(){
-        emailjs.init("2d_website_access"); // Line ~105: Initialization of EmailJS
+        emailjs.init("2ddrugadimenzija@gmail.com"); // Line ~105: Initialization of EmailJS
       })();
       
       // When the page loads, send an email notification
