--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         };
         
         // Send the email using your EmailJS service and template IDs
-        emailjs.send('2d_website_access', 'cKWNm5NVSdw_T9ez1', templateParams) // Line ~115: Replace placeholders with your IDs
+        emailjs.send('2d_website_access', 'template_rjz9rqx', templateParams) // Line ~115: Replace placeholders with your IDs
           .then(function(response) {
             console.log('Email notification sent successfully!', response.status, response.text);
           }, function(error) {
