--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     
     <!-- START: EmailJS integration for visit notification -->
     <!-- Load EmailJS SDK from CDN -->
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
       // Initialize EmailJS with your user ID (replace 'YOUR_USER_ID' with your actual EmailJS user ID)
       (function(){
