--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </head>
 <body>
     
-    <img src="./full logo.png" alt="Logo" class="logo">
+    <img src="./logo/full logo.svg" alt="Logo" class="logo">
     
     <div class="container">
         <div class="icons-grid">
