Updated pngs with svgs

--- a/menu_page.html
+++ b/menu_page.html
@@ -367,18 +367,13 @@
     <header>
         <div class="container">
             <div class="logo">
-				<img src="./images/logo_picture.png" alt="Druga Dimenzija Logo" height = 50px/>
-				<img src="./images/logo_text.png" alt="Druga Dimenzija Text" />
+				<img src="./logo/picture logo.svg" alt="Druga Dimenzija Logo" height = 50px/>
+				<img src="./logo/text logo.svg" alt="Druga Dimenzija Text" />
 
 			</div>
 			
             <div class="sublogo">
 				FAST FOOD & GRILL
-				<!--
-                <a href="https://www.instagram.com/druga_dimenzija_kg/" target="_blank" class="instagram-link">
-					<img src="./images/insta_logo4.png" alt="Instagram" class="instagram-image">
-				</a>
-                -->
 			</div>
         </div>
     </header>
@@ -486,7 +481,7 @@
 
                     <div class="food-card" data-category="burgers">
 						<div class="shine"></div>
-                        <img src="./images/logo_card.png" alt="2D burger" class="food-image">
+                        <img src="./logo/picture+text+purple.svg" alt="2D burger" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">2D Burger</h3>
                             <p class="food-description">Idemo, specijalitet! Stotka grama mesa, pa čedar, pa stotka mesa, pa slaninica, pa čedar, kiseli krastavac, zelena salata i naravno, burger sos. (100% juneće)</p>
@@ -553,7 +548,7 @@
 
                     <div class="food-card" data-category="chicken">
 						<div class="shine"></div>
-                        <img src="./images/logo_card.png" alt="Pileca karadjordjeva" class="food-image">
+                        <img src="./logo/picture+text+purple.svg" alt="Pileca karadjordjeva" class="food-image">
                         
                         <div class="food-content">
                             <h3 class="food-title">Pileća karađorđeva, klasikica</h3>
@@ -609,7 +604,7 @@
 
                     <div class="food-card" data-category="chicken">
 						<div class="shine"></div>
-                        <img src="./images/logo_card.png" alt="Pohovani pileći file" class="food-image">
+                        <img src="./logo/picture+text+purple.svg" alt="Pohovani pileći file" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">Pohovani pileći file</h3>
                             <p class="food-description">Pohovano belo. <br>  Pablo više voli čisto, ali ovo je najbolje pohovano koje je ikad probao.</p>
@@ -622,7 +617,7 @@
 
                     <div class="food-card" data-category="chicken">
 						<div class="shine"></div>
-                        <img src="./images/logo_card.png" alt="Chicken nuggets" class="food-image">
+                        <img src="./logo/picture+text+purple.svg" alt="Chicken nuggets" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">Chicken nuggets</h3>
                             <p class="food-description">Pohovane "loptice" piletine savršene za umakanje u različite sosove, a od nas dobijate cak 2 ili 3 ili 4??? <br> Perfekcija.</p>
@@ -642,7 +637,7 @@
                 <div class="menu-grid">
                     <div class="food-card" data-category="specijaliteti">
 						<div class="shine"></div>
-                        <img src="./images/logo_card.png" alt="sendvic" class="food-image">
+                        <img src="./logo/picture+text+purple.svg" alt="sendvic" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">Sendvič</h3>
                             <p class="food-description">Ako ste za brzu klopu ili ste u žurbi, naši sendviči su uvek tu da Vas stignu. <br> U pitanju je: meso iz ponude ispod, kačkavalj, zelena salata i namaz po izboru.</p>
@@ -716,7 +711,7 @@
 					
                     <div class="food-card" data-category="dorucak">
 						<div class="shine"></div>
-                        <img src="./images/logo_card.png" alt="jaja kackavalj" class="food-image">
+                        <img src="./logo/picture+text+purple.svg" alt="jaja kackavalj" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">Kajgana sa kačkavaljem</h3>
                             <p class="food-description">Tri jaja i najfiniji kačkavalj za dobar početak jutra.</p>
@@ -729,7 +724,7 @@
 
                     <div class="food-card" data-category="dorucak">
 						<div class="shine"></div>
-                        <img src="./images/logo_card.png" alt="jaja sunka" class="food-image">
+                        <img src="./logo/picture+text+purple.svg" alt="jaja sunka" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">Kajgana sa šunkom</h3>
                             <p class="food-description">Trostruko jaje i, nikada ne biste očekivali, šunka.<br>  Kreativno zar ne? </p>
