--- a/menu_page.html
+++ b/menu_page.html
@@ -41,7 +41,6 @@
         }
 
         :root {
-            --black: #121212;
             --primary: #1a1a1a;
             --secondary: #2d2d2d;
             --accent: #9D00FF;
@@ -120,7 +119,7 @@
 		}
 
         .nav-container {
-            background: var(--black);
+            background: var(--secondary);
             padding: 1rem 0;
             margin-top: 0.5rem;
             border-radius: 10px;
