--- a/menu_page.html
+++ b/menu_page.html
@@ -999,18 +999,19 @@
         }
     </script>
 
-
-    <!-- Add the fetch API code to import the popup ad -->
-    <div id="popup-ad-container"></div>
+    <!-- Popup Iframe Container -->
+    <div id="popup-ad-iframe-container" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); z-index: 1000; justify-content: center; align-items: center;">
+        <iframe src="popup-ad.html" style="width: 90%; max-width: 500px; height: auto; border: none; background: #fff; border-radius: 8px;"></iframe>
+    </div>
     <script>
-        fetch('popup-ad.html')
-          .then(response => response.text())
-          .then(html => {
-            document.getElementById('popup-ad-container').innerHTML = html;
-            // If the imported popup requires initialization, you can call its functions here.
-          })
-          .catch(err => console.error('Failed to load popup ad:', err));
+        window.addEventListener('load', () => {
+          setTimeout(() => {
+            document.getElementById('popup-ad-iframe-container').style.display = 'flex';
+          }, 1000); // shows after 1 second
+        });
     </script>
+      
+
 
 </body>
 </html>
