--- a/menu_page.html
+++ b/menu_page.html
@@ -562,6 +562,20 @@
 
                     <div class="food-card" data-category="chicken">
 						<div class="shine"></div>
+                        <img src="./images/leteca_kofica/piletina pohovana.jpg" alt="Leteća kofica" class="food-image">
+                        
+                        <div class="food-content">
+                            <h3 class="food-title">Leteća kofica</h3>
+                            <p class="food-description">Uživajte u vrhunskoj piletini mase 250gr (380g sa pohom) ušuškanoj u 200g hrskavog i neodoljivog pomfrita. <br> Ne brinite se, ne leti stvarno.😉</p>
+                            <div class="food-footer">
+                                <span class="food-price">250g mesa <br>+200g pomfrita: 600 RSD</span>
+                                <button class="call-button" onclick="handleClick()">Pozovite odmah</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="food-card" data-category="chicken">
+						<div class="shine"></div>
                         <img src="./images/batak.jpg" alt="batak" class="food-image">
                         <div class="food-content">
                             <h3 class="food-title">Pileći batak</h3>
