--- a/popup-ad.html
+++ b/popup-ad.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Popup Ad Example</title>
   <style>
-    /* The modal container */
+    /* The modal container
     #popup-ad {
-      display: none; /* Hidden by default */
+      display: none;
       position: fixed;
       z-index: 1000;
       left: 0;
@@ -15,10 +15,11 @@
       width: 100%;
       height: 100%;
       overflow: auto;
-      background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+      background-color: rgba(0, 0, 0, 0.5);  
       justify-content: center;
       align-items: center;
-    }
+    } 
+    */
     
     /* Popup content box */
     .popup-content {
@@ -138,7 +139,8 @@
 
     // Close popup when clicking outside the popup content
     window.addEventListener("click", (event) => {
-      if (event.target === popup) {
+      if (event.target === popup) { 
+        window.parent.document.getElementById('popup-ad-iframe-container').style.display = 'none';
         popup.style.display = "none";
       }
     });
