--- a/menu_page.html
+++ b/menu_page.html
@@ -568,7 +568,7 @@
                             <h3 class="food-title">Leteća kofica</h3>
                             <p class="food-description">Uživajte u vrhunskoj piletini mase 250gr (380g sa pohom) ušuškanoj u 200g hrskavog i neodoljivog pomfrita. <br> Ne brinite se, ne leti stvarno.😉</p>
                             <div class="food-footer">
-                                <span class="food-price">250g mesa <br>+200g pomfrita: 600 RSD</span>
+                                <span class="food-price">250g +200g pomfrita:<br>600 RSD</span>
                                 <button class="call-button" onclick="handleClick()">Pozovite odmah</button>
                             </div>
                         </div>
