--- a/popup-ad.html
+++ b/popup-ad.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Popup Ad Example</title>
   <style>
+    *{
+        font-family: 'Segoe UI', sans-serif;
+    }
     /* Ensure the body has no extra margins/padding and a transparent background */
     body {
       margin: 0;
