--- a/popup-ad.html
+++ b/popup-ad.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Popup Ad Example</title>
   <style>
-    *{
+    * {
         font-family: 'Segoe UI', sans-serif;
     }
+    
     /* Ensure the body has no extra margins/padding and a transparent background */
     body {
       margin: 0;
@@ -101,6 +102,7 @@
     <p class="product-description">
       Isprobajte našu "special edition" leteću koficu koja se sastoji od 250g pilećeg belog mesa (380g sa pohom), ušuškanog u 200g hrskavog pomfrita.
     </p>
+    <button class="call-shop">Pozovite odmah!</button>
   </div>
 
   <script>
@@ -118,6 +120,7 @@
       } else {
         console.error("Call handler (handleClick) is not available.");
       }
+      
     });
   </script>
 </body>
