--- a/popup-ad.html
+++ b/popup-ad.html
@@ -33,11 +33,11 @@
     /* Close button */
     .close {
       position: absolute;
-      top: 10px;
-      right: 15px;
+      top: 20px;
+      right: 20px;
       font-size: 28px;
       font-weight: bold;
-      color: #aaa;
+      color: #000000;
       cursor: pointer;
     }
     
