--- a/menu_page.html
+++ b/menu_page.html
@@ -1014,7 +1014,7 @@
     </script>
 
     <!-- Popup Iframe Container -->
-    <div id="popup-ad-iframe-container" 
+    <!-- <div id="popup-ad-iframe-container" 
         style="display: none; 
                 position: fixed; 
                 top: 0; left: 0; 
@@ -1041,7 +1041,7 @@
         document.getElementById('popup-ad-iframe-container').style.display = 'flex';
         }, 1500);
     });
-    </script>
+    </script> -->
 
 </body>
 </html>
