--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                 </div>
                 <span class="label">Meni</span>
             </a>-->
-			<a href="https://g.page/r/CYDGuSgZULSMEAI/review" class="icon-link" target="_blank" rel="noopener noreferrer">
-                <div class="icon-container">
-                    <svg class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-label="Rate Us">
+            <a href="https://g.page/r/CYDGuSgZULSMEAI/review" class="icon-link" target="_blank" rel="noopener noreferrer">
+                <div class="icon-container" style="border: yellow;">
+                    <svg class="icon" fill="yellow" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-label="Rate Us">
                         <polygon points="12,2 15,8 22,9 17,14 18,21 12,18 6,21 7,14 2,9 9,8"/>
                     </svg>
                 </div>
