shanged to yellow for Rate us for better visibility and attention seeking

--- a/index.html
+++ b/index.html
@@ -98,6 +98,25 @@
             fill: #7B68EE;
         }
 
+        .icon-container-rate-us {
+            width: 80px;
+            height: 80px;
+            background: linear-gradient(135deg, #2c2c2c 0%, #3a3a3a 100%);
+            border-radius: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 1rem;
+            box-shadow: 0 4px 15px rgba(123, 104, 238, 0.2);
+            border: 2px solid yellow;
+        }
+
+        .icon-rate-us {
+            width: 40px;
+            height: 40px;
+            fill: yellow;
+        }
+
         .label {
             font-size: 1rem;
             color: #bebebe;
@@ -183,8 +202,8 @@
                 <span class="label">Meni</span>
             </a>-->
             <a href="https://g.page/r/CYDGuSgZULSMEAI/review" class="icon-link" target="_blank" rel="noopener noreferrer">
-                <div class="icon-container" style="border: yellow;">
-                    <svg class="icon" fill="yellow" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-label="Rate Us">
+                <div class="icon-container-rate-us">
+                    <svg class="icon-rate-us" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-label="Rate Us">
                         <polygon points="12,2 15,8 22,9 17,14 18,21 12,18 6,21 7,14 2,9 9,8"/>
                     </svg>
                 </div>
