Changed Rate us size on mobile telephones

--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
             .label {
                 font-size: 0.85rem;
             }
+            
+            .icon-container-rate-us {
+                width: 60px;
+                height: 60px;
+                border-radius: 15px;
+            }
+
+            .icon-rate-us {
+                width: 30px;
+                height: 30px;
+            }
         }
     </style>
 </head>
