Change main colour to logos colour

--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             justify-content: center;
             margin-bottom: 1rem;
             box-shadow: 0 4px 15px rgba(123, 104, 238, 0.2);
-            border: 2px solid #7B68EE;
+            border: 2px solid #a75eb9;
         }
 
         .icon {
             width: 40px;
             height: 40px;
-            fill: #7B68EE;
+            fill: #a75eb9;
         }
 
         .icon-container-rate-us {
